formatação do formulário

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 </head>
 <body>
     <main>
-        <section id="login">
-            <div id="imagem">
+    <section id="login">
+        <div id="imagem">
                 
-            </div>
-            <div id="formulario">
-                <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta.</p>
-                <form action="login.php" method="post" autocomplete="on">
-                    <div class="campo">
-                        <label for="log">Login:</label>
-                        <input type="email" name="email" id="email" required placeholder="Digite seu e-mail" autocomplete="email">
-                        <span class="material-symbols-outlined">person</span>
+        </div>
+        <div id="formulario">
+            <h1>Login</h1>
+            <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta.</p>
+            <form action="login.php" method="post" autocomplete="on">
+                <div class="campo">
+                    <label for="log"><strong>Login:</strong></label>
+                    <input type="email" name="email" id="email" required placeholder="Digite seu e-mail" autocomplete="email">
+                    <span class="material-symbols-outlined">person</span>
                     </div>
-                    <div class="campo">
-                        <label for="senha">Senha:</label>
-                        <input type="password" name="senha" id="senha" required placeholder="Digite sua senha" minlength="8" autocomplete="current-password">
-                        <span class="material-symbols-outlined">key</span>
-                    </div>
+                <div class="campo">
+                    <label for="senha"><strong>Senha:</strong></label>
+                    <input type="password" name="senha" id="senha" required placeholder="Digite sua senha" minlength="8" autocomplete="current-password">
+                    <span class="material-symbols-outlined">key</span>
+                </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha <span class="material-symbols-outlined">mail</span></a>
+                    <a href="esqueci.html" class="botao">Esqueci a senha <span class="material-symbols-outlined">mail</span></a>
                 </form>
             </div>
         </section>
